--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <div>
 <div>
 <div>
-<div>Sr. Software Automation Engineer - BE Computer Pune - 12.5 years experience in - Test automation/development and testing- Selenium Webdriver(python and ruby)and ETAP ruby framework.</div>
+<div>Sr. Software Automation Engineer - BE Computer Pune - 12+ years experience in - Test automation/development and testing- Selenium Webdriver(python and ruby)and ETAP ruby framework.</div>
 <div>Working experience at all levels of SDLC from Feasibility, use/test case generation till maintenance, and help document preparation of software products.</div>
 </div>
 </div>
